# claude.ai

./: .env.example  .gitignore  README.md  capacitor.config.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
.github/workflows/: build.yml
claude-cli/: README.md  claude.js  package.json
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  remote.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/(app)/: layout.tsx
src/app/(app)/artifacts/: page.tsx
src/app/(app)/chat/: page.tsx
src/app/(app)/chat/[id]/: page.tsx
src/app/(app)/download/: page.tsx
src/app/(app)/settings/: page.tsx
src/app/(auth)/login/: page.tsx
src/app/(auth)/register/: page.tsx
src/app/api/auth/[...nextauth]/: route.ts
src/app/api/chat/: route.ts
src/app/api/debug/groq-models/: route.ts
src/app/api/messages/: route.ts
src/app/api/models/: route.ts
src/app/api/register/: route.ts
src/app/api/sessions/: route.ts
src/app/api/upload/: route.ts
src/app/api/user/: route.ts
src/components/chat/: ChatInput.tsx  ChatMessage.tsx  FileTreeViewer.tsx  ModelSelector.tsx
src/components/layout/: Sidebar.tsx
src/components/ui/: LogoAnimation.tsx
src/hooks/: useTauri.ts
src/lib/: models.ts  openrouter.ts  supabase.ts  tauri.ts  utils.ts
src/types/: index.ts  next-auth.d.ts
supabase/: schema.sql
